--- a/client/src/app/components/assertions/assertions-popover/assertion-popover.component.html
+++ b/client/src/app/components/assertions/assertions-popover/assertion-popover.component.html
@@ -58,13 +58,13 @@
         </ng-template>
 
         <nz-descriptions-item nzTitle="FDA Companion Test">
-              <i nz-icon *ngIf="assertion.fdaCompanionTest" nzType="check-circle" nzTheme="twotone" nzTwotoneColor="#52c41a"></i>
-              <i nz-icon *ngIf="!assertion.fdaCompanionTest" nzType="close-square" nzTheme="twotone" nzTwotoneColor="#d93026"></i>
+          <i nz-icon *ngIf="assertion.fdaCompanionTest" nzType="check-circle" nzTheme="twotone" nzTwotoneColor="#52c41a"></i>
+          <i nz-icon *ngIf="!assertion.fdaCompanionTest" nzType="close-square" nzTheme="twotone" nzTwotoneColor="#d93026"></i>
         </nz-descriptions-item>
 
         <nz-descriptions-item nzTitle="Regulatory Approval">
-              <i nz-icon *ngIf="assertion.regulatoryApproval" nzType="check-circle" nzTheme="twotone" nzTwotoneColor="#52c41a"></i>
-              <i nz-icon *ngIf="!assertion.regulatoryApproval" nzType="close-square" nzTheme="twotone" nzTwotoneColor="#d93026"></i>
+          <i nz-icon *ngIf="assertion.regulatoryApproval" nzType="check-circle" nzTheme="twotone" nzTwotoneColor="#52c41a"></i>
+          <i nz-icon *ngIf="!assertion.regulatoryApproval" nzType="close-square" nzTheme="twotone" nzTwotoneColor="#d93026"></i>
         </nz-descriptions-item>
 
         <nz-descriptions-item nzTitle="NCCN Guideline">
@@ -115,30 +115,24 @@
       <nz-row id="entity-child-counts">
         <nz-col nzSpan="24">
           <nz-space nzSize="small">
-            <nz-space-item>
-              <a routerLink="/assertions/{{assertion.id}}/flags">
-                <nz-tag nzColor="red">
-                  <i nz-icon
-                    nzType="civic-flag"></i> Flags ({{ assertion.flags.totalCount }})
-                </nz-tag>
-              </a>
-            </nz-space-item>
-            <nz-space-item>
-              <a routerLink="/assertions/{{assertion.id}}/revisions">
-                <nz-tag nzColor="orange">
-                  <i nz-icon
-                    nzType="civic-revision"></i> Revisions ({{ assertion.revisions.totalCount }})
-                </nz-tag>
-              </a>
-            </nz-space-item>
-            <nz-space-item>
-              <a routerLink="/assertions/{{assertion.id}}/comments">
-                <nz-tag nzColor="blue">
-                  <i nz-icon
-                    nzType="civic-comment"></i> Comments ({{ assertion.comments.totalCount }})
-                </nz-tag>
-              </a>
-            </nz-space-item>
+            <a routerLink="/assertions/{{assertion.id}}/flags" *nzSpaceItem>
+              <nz-tag nzColor="red">
+                <i nz-icon
+                  nzType="civic-flag"></i> Flags ({{ assertion.flags.totalCount }})
+              </nz-tag>
+            </a>
+            <a routerLink="/assertions/{{assertion.id}}/revisions" *nzSpaceItem>
+              <nz-tag nzColor="orange">
+                <i nz-icon
+                  nzType="civic-revision"></i> Revisions ({{ assertion.revisions.totalCount }})
+              </nz-tag>
+            </a>
+            <a routerLink="/assertions/{{assertion.id}}/comments" *nzSpaceItem>
+              <nz-tag nzColor="blue">
+                <i nz-icon
+                  nzType="civic-comment"></i> Comments ({{ assertion.comments.totalCount }})
+              </nz-tag>
+            </a>
           </nz-space>
         </nz-col>
       </nz-row>
