--- a/client/src/app/components/revisions/revision-list-diff/revision-list-diff.component.html
+++ b/client/src/app/components/revisions/revision-list-diff/revision-list-diff.component.html
@@ -2,23 +2,22 @@
   <nz-col [nzSpan]="8">
     <!-- show original items -->
     <nz-list nzHeader="Original {{ entityType }} List" nzBordered nzType="inner" nzSize="small">
-    <nz-list-item *ngFor="let item of this.diffObject.currentObjects" ngClass="current">
+      <nz-list-item *ngFor="let item of this.diffObject.currentObjects" ngClass="current">
         <span nz-typography>
-        <ng-container
+          <ng-container
             [ngTemplateOutlet]="itemTemplateRef || null"
             [ngTemplateOutletContext]="{ $implicit: item }">
-        </ng-container>
+          </ng-container>
         </span>
-    </nz-list-item>
-    <nz-list-empty *ngIf="this.diffObject.currentObjects.length === 0"
-    nzNoResult="No {{ entityType }}"></nz-list-empty>
+      </nz-list-item>
+      <nz-list-empty *ngIf="this.diffObject.currentObjects.length === 0"
+        nzNoResult="No {{ entityType }}"></nz-list-empty>
     </nz-list>
   </nz-col>
   <nz-col [nzSpan]="8">
     <nz-space nzDirection="vertical">
-      <nz-space-item>
       <!-- show removed items -->
-      <nz-list *ngIf="this.diffObject.currentObjects.length > 0" nzHeader="Removed {{ entityType }}" nzBordered nzType="inner" nzSize="small">
+      <nz-list *ngIf="this.diffObject.currentObjects.length > 0" nzHeader="Removed {{ entityType }}" nzBordered nzType="inner" nzSize="small" *nzSpaceItem>
         <nz-list-item *ngFor="let item of this.diffObject.removedObjects" ngClass="removed">
           <span nz-typography>
             <ng-container
@@ -28,12 +27,10 @@
           </span>
         </nz-list-item>
         <nz-list-empty *ngIf="this.diffObject.removedObjects.length === 0"
-        nzNoResult="No {{ entityType }} Removed"></nz-list-empty>
+          nzNoResult="No {{ entityType }} Removed"></nz-list-empty>
       </nz-list>
-      </nz-space-item>
-      <nz-space-item>
       <!-- show added items -->
-      <nz-list nzHeader="Added {{ entityType }}" nzBordered nzType="inner" nzSize="small">
+      <nz-list nzHeader="Added {{ entityType }}" nzBordered nzType="inner" nzSize="small" *nzSpaceItem>
         <nz-list-item *ngFor="let item of this.diffObject.addedObjects" ngClass="added">
           <span nz-typography>
             <ng-container
@@ -45,9 +42,7 @@
         <nz-list-empty *ngIf="this.diffObject.addedObjects.length === 0"
           nzNoResult="No {{ entityType }} Added"></nz-list-empty>
       </nz-list>
-      </nz-space-item>
-      <nz-space-item>
-      <nz-list *ngIf="this.diffObject.currentObjects.length > 0" nzHeader="Kept {{ entityType }}" nzBordered nzType="inner" nzSize="small">
+      <nz-list *ngIf="this.diffObject.currentObjects.length > 0" nzHeader="Kept {{ entityType }}" nzBordered nzType="inner" nzSize="small" *nzSpaceItem>
         <nz-list-item *ngFor="let item of this.diffObject.keptObjects" ngClass="kept">
           <span nz-typography>
             <ng-container
@@ -59,7 +54,6 @@
         <nz-list-empty *ngIf="this.diffObject.keptObjects.length === 0"
           nzNoResult="No {{ entityType }} Kept"></nz-list-empty>
       </nz-list>
-      </nz-space-item>
     </nz-space>
   </nz-col>
   <nz-col [nzSpan]="8">
