--- a/client/src/app/components/shared/moderate-entity-buttons/moderate-entity-buttons.component.html
+++ b/client/src/app/components/shared/moderate-entity-buttons/moderate-entity-buttons.component.html
@@ -1,18 +1,14 @@
 <div class="center">
   <nz-spin [nzSpinning]="this.isSubmitting">
     <nz-space nzDirection="horizontal" nzSize="large">
-      <nz-space-item>
-        <cvc-org-selector-btn-group [(selectedOrg)]="this.mostRecentOrg">
-          <button cvcOrgSelectorBtn nzType="primary" nzSize="large" nz-button
-            (click)="this.moderate(this.evidenceStatuses.Accepted)">Accept {{ this.entityType }}</button>
-        </cvc-org-selector-btn-group>
-      </nz-space-item>
-      <nz-space-item>
-        <cvc-org-selector-btn-group nzDanger nzType="primary" [(selectedOrg)]="this.mostRecentOrg">
-          <button cvcOrgSelectorBtn nzDanger nzType="primary" nzSize="large" nz-button
-            (click)="this.moderate(this.evidenceStatuses.Rejected)">Reject {{ this.entityType }}</button>
-        </cvc-org-selector-btn-group>
-      </nz-space-item>
+      <cvc-org-selector-btn-group [(selectedOrg)]="this.mostRecentOrg" *nzSpaceItem>
+        <button cvcOrgSelectorBtn nzType="primary" nzSize="large" nz-button
+          (click)="this.moderate(this.evidenceStatuses.Accepted)">Accept {{ this.entityType }}</button>
+      </cvc-org-selector-btn-group>
+      <cvc-org-selector-btn-group nzDanger nzType="primary" [(selectedOrg)]="this.mostRecentOrg" *nzSpaceItem>
+        <button cvcOrgSelectorBtn nzDanger nzType="primary" nzSize="large" nz-button
+          (click)="this.moderate(this.evidenceStatuses.Rejected)">Reject {{ this.entityType }}</button>
+      </cvc-org-selector-btn-group>
     </nz-space>
   </nz-spin>
 </div>
