--- a/client/src/app/components/shared/revert-entity-button/revert-entity-button.component.html
+++ b/client/src/app/components/shared/revert-entity-button/revert-entity-button.component.html
@@ -9,14 +9,14 @@
 <ng-template #confirmModalContent>
   <nz-spin [nzSpinning]="this.isSubmitting">
     <nz-space nzDirection="horizontal">
-      <nz-space-item>
+      <span *nzSpaceItem>
       <cvc-org-selector-btn-group [(selectedOrg)]="this.mostRecentOrg">
         <button cvcOrgSelectorBtn nzType="primary" nzSize="small" nz-button (click)="this.revert()">Revert</button>
       </cvc-org-selector-btn-group>
-      </nz-space-item>
-      <nz-space-item>
+      </span>
+      <span *nzSpaceItem>
         <button nz-button (click)="this.showConfirm = false" nzSize="small">Cancel</button>
-      </nz-space-item>
+      </span>
     </nz-space>
   </nz-spin>
 </ng-template>
