--- a/client/src/app/forms/sources/types/source-input/source-selector/source-selector-loader/source-selector-loader.component.html
+++ b/client/src/app/forms/sources/types/source-input/source-selector/source-selector-loader/source-selector-loader.component.html
@@ -1,29 +1,29 @@
 <ng-container *ngIf="foundCitation; else fetchCitation">
   <!-- found citation, add to CIViC sources?-->
   <nz-space nzDirection="vertical">
-    <nz-space-item *ngIf="createSuccess === false && createErrors.length === 0">
-      <nz-alert nzType="info"
+    <ng-container *ngIf="createSuccess === false && createErrors.length === 0">
+      <nz-alert nzType="info" *nzSpaceItem
         [nzMessage]="foundCitationMsg"
         nzShowIcon>
       </nz-alert>
       <ng-template #foundCitationMsg>
         Found citation: <em>{{ foundCitation }}</em>
       </ng-template>
-    </nz-space-item>
-    <nz-space-item *ngIf="createSuccess === true">
-      <nz-alert nzType="success"
+    </ng-container>
+    <ng-container *ngIf="createSuccess === true">
+      <nz-alert nzType="success" *nzSpaceItem
         [nzMessage]="createdMsg"
         nzShowIcon>
       </nz-alert>
       <ng-template #createdMsg>
         '<em>{{ foundCitation }}</em>' created.
       </ng-template>
-    </nz-space-item>
+    </ng-container>
     <nz-form-item *ngIf="createErrors.length > 0">
       <cvc-form-errors-alert [errors]="createErrors">
       </cvc-form-errors-alert>
     </nz-form-item>
-    <nz-space-item *ngIf="createSuccess === false">
+    <ng-container *ngIf="createSuccess === false">
       <!-- create new source stub button -->
       <button type="submit"
         (click)="onCreateSourceStub($event)"
@@ -31,52 +31,48 @@
         nz-button
         nzBlock
         nzType="primary"
-        nzSize="default">
+        nzSize="default" *nzSpaceItem>
         Create&nbsp;'<em>{{ foundCitation }}</em>'&nbsp; CIViC Source
       </button>
-    </nz-space-item>
-    <nz-space-item *ngIf="createSuccess === true">
+    </ng-container>
+    <ng-container *ngIf="createSuccess === true">
       <!-- Accept & add new source to source list -->
       <button type="submit"
         (click)="onAcceptSource($event)"
         nz-button
         nzBlock
         nzType="primary"
-        nzSize="default">
+        nzSize="default" *nzSpaceItem>
         Add Source to List
       </button>
-    </nz-space-item>
+    </ng-container>
   </nz-space>
 </ng-container>
 <ng-template #fetchCitation>
   <!-- source not found, fetch citation? -->
   <nz-space nzDirection="vertical">
-    <nz-space-item>
-      <span *ngIf="showPrompt"
-        nz-typography>
-        <i nz-icon nzType="info-circle" nzTheme="twotone"></i>
-        Source not known to CIViC, fetch citation from {{ sourceTypeKey }}?
-      </span>
-      <span *ngIf="existenceFail">
-        <nz-alert nzType="warning"
-          [nzMessage]="existenceFail"
-          nzShowIcon>
-        </nz-alert>
-        <ng-template #existenceFail>
-          Citation not found for {{ sourceTypeKey }}: {{ citationId  }}.
-        </ng-template>
-      </span>
-    </nz-space-item>
-    <nz-space-item>
-      <button type="submit"
-        (click)="onExistenceQuery($event)"
-        [nzLoading]="isChecking"
-        nz-button
-        nzBlock
-        nzType="primary"
-        nzSize="default">
-        Fetch Citation for&nbsp;<strong>{{ sourceTypeKey }} {{ citationId }}</strong>
-      </button>
-    </nz-space-item>
+    <span *ngIf="showPrompt" *nzSpaceItem
+      nz-typography>
+      <i nz-icon nzType="info-circle" nzTheme="twotone"></i>
+      Source not known to CIViC, fetch citation from {{ sourceTypeKey }}?
+    </span>
+    <span *ngIf="existenceFail" *nzSpaceItem>
+      <nz-alert nzType="warning"
+        [nzMessage]="existenceFail"
+        nzShowIcon>
+      </nz-alert>
+      <ng-template #existenceFail>
+        Citation not found for {{ sourceTypeKey }}: {{ citationId  }}.
+      </ng-template>
+    </span>
+    <button type="submit" *nzSpaceItem
+      (click)="onExistenceQuery($event)"
+      [nzLoading]="isChecking"
+      nz-button
+      nzBlock
+      nzType="primary"
+      nzSize="default">
+      Fetch Citation for&nbsp;<strong>{{ sourceTypeKey }} {{ citationId }}</strong>
+    </button>
   </nz-space>
 </ng-template>
