--- a/client/src/app/views/diseases/diseases-detail/diseases-detail.component.html
+++ b/client/src/app/views/diseases/diseases-detail/diseases-detail.component.html
@@ -2,9 +2,7 @@
   <nz-page-header class="site-page-header">
     <nz-page-header-title>
       <nz-space nzDirection="horizontal">
-        <nz-space-item>
-          <i nz-icon nzType="civic:disease"></i>
-        </nz-space-item>
+        <i nz-icon nzType="civic:disease" *nzSpaceItem></i>
         {{ disease.name }}
       </nz-space>
     </nz-page-header-title>
@@ -16,12 +14,12 @@
     </nz-page-header-extra>
     <nz-page-header-content>
       <div class="content">
-      <nz-descriptions nzSize="small"
-        [nzColumn]="1"
-        nzBordered="true">
-        <nz-descriptions-item *ngIf="disease.diseaseAliases.length > 0" nzTitle="Aliases" nzSpan="2">
-          {{ disease.diseaseAliases.join(', ') }}
-        </nz-descriptions-item>
+        <nz-descriptions nzSize="small"
+          [nzColumn]="1"
+          nzBordered="true">
+          <nz-descriptions-item *ngIf="disease.diseaseAliases.length > 0" nzTitle="Aliases" nzSpan="2">
+            {{ disease.diseaseAliases.join(', ') }}
+          </nz-descriptions-item>
         </nz-descriptions>
         <router-outlet></router-outlet>
       </div>
