--- a/client/src/app/views/evidence/evidence-add/evidence-submit/evidence-submit.page.html
+++ b/client/src/app/views/evidence/evidence-add/evidence-submit/evidence-submit.page.html
@@ -1,24 +1,16 @@
 <nz-row [nzGutter]="16">
   <nz-col nzSpan="16">
-      <cvc-evidence-submit-form> </cvc-evidence-submit-form>
+    <cvc-evidence-submit-form> </cvc-evidence-submit-form>
   </nz-col>
   <nz-col nzSpan="8">
     <nz-card nzTitle="Instructions"
       nz-type="inner">
       <nz-space nzDirection="vertical"
         style="width: 100%">
-        <nz-space-item>
-          <nz-skeleton [nzParagraph]="{ rows: 1 }"></nz-skeleton>
-        </nz-space-item>
-        <nz-space-item>
-          <nz-skeleton [nzParagraph]="{ rows: 3 }"></nz-skeleton>
-        </nz-space-item>
-        <nz-space-item>
-          <nz-skeleton [nzParagraph]="{ rows: 4 }"></nz-skeleton>
-        </nz-space-item>
-        <nz-space-item>
-          <nz-skeleton [nzParagraph]="{ rows: 5 }"></nz-skeleton>
-        </nz-space-item>
+        <nz-skeleton [nzParagraph]="{ rows: 1 }" *nzSpaceItem></nz-skeleton>
+        <nz-skeleton [nzParagraph]="{ rows: 3 }" *nzSpaceItem></nz-skeleton>
+        <nz-skeleton [nzParagraph]="{ rows: 4 }" *nzSpaceItem></nz-skeleton>
+        <nz-skeleton [nzParagraph]="{ rows: 5 }" *nzSpaceItem></nz-skeleton>
       </nz-space>
     </nz-card>
   </nz-col>
