--- a/client/src/app/views/variant-groups/variant-groups-summary/variant-groups-summary.component.html
+++ b/client/src/app/views/variant-groups/variant-groups-summary/variant-groups-summary.component.html
@@ -4,62 +4,56 @@
   class="space-align-block">
 
   <!-- variantGroup description, details row -->
-  <nz-space-item>
-    <nz-row [nzGutter]="16">
+  <nz-row [nzGutter]="16" *nzSpaceItem>
 
-      <!-- variantGroup description, sources col -->
-      <nz-col nzSpan="12">
-        <nz-space nzDirection="vertical">
+    <!-- variantGroup description, sources col -->
+    <nz-col nzSpan="12">
+      <nz-space nzDirection="vertical">
 
-          <!-- description, sources -->
-          <nz-space-item>
-            <nz-descriptions nzLayout="vertical"
-              nzSize="small"
-              nzBordered="true"
-              [nzColumn]="1">
+        <!-- description, sources -->
+        <nz-descriptions nzLayout="vertical"
+          nzSize="small"
+          nzBordered="true"
+          [nzColumn]="1" *nzSpaceItem>
 
-              <!-- description -->
-              <nz-descriptions-item nzTitle="Description">
-                <p *ngIf="variantGroup.description; else noDescription" nz-typography
-                  nzEllipsis
-                  nzExpandable
-                  [nzEllipsisRows]="14">{{ variantGroup.description }}</p>
+          <!-- description -->
+          <nz-descriptions-item nzTitle="Description">
+            <p *ngIf="variantGroup.description; else noDescription" nz-typography
+              nzEllipsis
+              nzExpandable
+              [nzEllipsisRows]="14">{{ variantGroup.description }}</p>
 
-                <!-- noDescription Tpl -->
-                <ng-template #noDescription>
-                  <cvc-empty-revisable notification="No description provided"> </cvc-empty-revisable>
-                </ng-template>
+            <!-- noDescription Tpl -->
+            <ng-template #noDescription>
+              <cvc-empty-revisable notification="No description provided"> </cvc-empty-revisable>
+            </ng-template>
 
-              </nz-descriptions-item>
+          </nz-descriptions-item>
 
-              <!-- sources -->
-              <!-- <nz-descriptions-item nzTitle="Sources">
-                   <ng-container *ngIf="variantGroup.sources.length > 0; else noSources">
-                   <cvc-tag-list>
-                   <cvc-source-tag *ngFor="let source of variantGroup.sources"
-                   [source]="source"></cvc-source-tag>
-                   </cvc-tag-list>
-                   </ng-container>
-                   <ng-template #noSources>
-                   <span nz-typography
-                   nzType="secondary">None specified</span>
-                   </ng-template>
-                   </nz-descriptions-item> -->
-            </nz-descriptions>
-          </nz-space-item>
-        </nz-space>
-      </nz-col>
-    </nz-row>
-  </nz-space-item>
+          <!-- sources -->
+          <!-- <nz-descriptions-item nzTitle="Sources">
+               <ng-container *ngIf="variantGroup.sources.length > 0; else noSources">
+               <cvc-tag-list>
+               <cvc-source-tag *ngFor="let source of variantGroup.sources"
+               [source]="source"></cvc-source-tag>
+               </cvc-tag-list>
+               </ng-container>
+               <ng-template #noSources>
+               <span nz-typography
+               nzType="secondary">None specified</span>
+               </ng-template>
+               </nz-descriptions-item> -->
+        </nz-descriptions>
+      </nz-space>
+    </nz-col>
+  </nz-row>
 
   <!-- variant menu row -->
-  <nz-space-item>
-    <nz-row [nzGutter]="16">
-      <nz-col [nzSpan]="24">
-        <h3>Variant Menu Here</h3>
-        <!-- <cvc-variant-menu [geneId]="gene.id"
-             [geneName]="gene.name"></cvc-variant-menu> -->
-      </nz-col>
-    </nz-row>
-  </nz-space-item>
+  <nz-row [nzGutter]="16" *nzSpaceItem>
+    <nz-col [nzSpan]="24">
+      <h3>Variant Menu Here</h3>
+      <!-- <cvc-variant-menu [geneId]="gene.id"
+           [geneName]="gene.name"></cvc-variant-menu> -->
+    </nz-col>
+  </nz-row>
 </nz-space>
