--- a/client/src/app/views/variant-types/variant-types-detail/variant-types-detail.component.html
+++ b/client/src/app/views/variant-types/variant-types-detail/variant-types-detail.component.html
@@ -3,10 +3,8 @@
   <nz-page-header class="site-page-header">
     <nz-page-header-title>
       <nz-space nzDirection="horizontal">
-        <nz-space-item>
-          <i nz-icon nzType="civic:varianttype"></i>
-        </nz-space-item>
-        {{ variantType.name }}
+        <i nz-icon nzType="civic:varianttype" *nzSpaceItem></i>
+        <span *nzSpaceItem>{{ variantType.name }}</span>
       </nz-space>
     </nz-page-header-title>
     <nz-page-header-extra>
