--- a/client/src/app/views/variants/variants-detail/variants-detail.view.html
+++ b/client/src/app/views/variants/variants-detail/variants-detail.view.html
@@ -6,15 +6,12 @@
     <nz-space nzDirection="horizontal">
 
       <!-- parent relations -->
-      <nz-space-item>
-        <span nz-typography
-          class="label"><strong>{{ variant.name }}</strong> Parent:</span>
-      </nz-space-item>
-      <nz-space-item class="tags">
+      <span nz-typography class="label" *nzSpaceItem><strong>{{ variant.name }}</strong> Parent:</span>
+      <span *nzSpaceItem class="tags">
         <a routerLink="/genes/{{ variant.gene.id }}">
           <cvc-gene-tag [gene]="variant.gene"></cvc-gene-tag>
         </a>
-      </nz-space-item>
+      </span>
 
     </nz-space>
   </ng-template>
@@ -43,7 +40,7 @@
           *ngrxLet="viewer$ as viewer">
 
           <!-- add revision btn -->
-          <nz-space-item>
+          <span *nzSpaceItem>
             <button [routerLink]="['/variants', variant.id, 'revise']"
               *ngIf="viewer.signedIn"
               routerLinkActive
@@ -53,11 +50,11 @@
               nzSize="small">
               Revise
             </button>
-          </nz-space-item>
+          </span>
 
           <!-- add flag btn -->
           <!-- TODO implement as flag form within popover window -->
-          <nz-space-item>
+          <span *nzSpaceItem>
             <button routerLink="flags"
               *ngIf="viewer.signedIn"
               routerLinkActive
@@ -67,12 +64,12 @@
               nzSize="small">
               Flag
             </button>
-          </nz-space-item>
+          </span>
 
-          <nz-space-item>
+          <span *nzSpaceItem>
             <cvc-entity-subscription-button *ngIf="viewer.signedIn && subscribable" [viewer]="viewer" [subscribableId]="subscribable.id" typename="Variant">
             </cvc-entity-subscription-button>
-          </nz-space-item>
+          </span>
 
         </nz-space>
       </nz-page-header-extra>
