fixed less imports from node_modules

--- a/client/src/themes/default.less
+++ b/client/src/themes/default.less
@@ -10,7 +10,7 @@
  * override colors from the zorro's default.less:
  */
 
-@import '~ng-zorro-antd/style/color/colors.less';
+@import 'ng-zorro-antd/style/color/colors.less';
 
 /*
  * PRIMARY COLOR PALETTE
