--- a/client/src/styles.less
+++ b/client/src/styles.less
@@ -1,6 +1,6 @@
 
 // Import the official compact less style file
-@import "~ng-zorro-antd/ng-zorro-antd.compact.less";
+@import "ng-zorro-antd/ng-zorro-antd.compact.less";
 
 // Override compact styles with CIViC default theme
 @import "./themes/default.less";
